--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~13.0.2",
     "@angular/platform-browser-dynamic": "~13.0.2",
     "@angular/router": "~13.0.2",
+    "@types/gsap": "^3.0.0",
+    "gsap": "^3.8.0",
+    "imports-loader": "^3.1.1",
     "rxjs": "~6.5.5",
+    "scrollmagic": "^2.0.8",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
